# ms-fabric-mcp

./: README.md  fabric_mcp.py  pyproject.toml
helpers/: logging_config.py
helpers/clients/: __init__.py  fabric_client.py  lakehouse_client.py  notebook_client.py  report_client.py  semanticModel_client.py  sql_client.py  table_client.py  warehouse_client.py  workspace_client.py
helpers/formatters/: metadata_formatter.py  schema_formatter.py
helpers/utils/: __init__.py  authentication.py  context.py  table_tools.py  validators.py
tools/: __init__.py  lakehouse.py  load_data.py  notebook.py  report.py  semantic_model.py  sql_endpoint.py  table.py  warehouse.py  workspace.py
